--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -20,7 +20,7 @@ jobs:
                   test-name: Setup
                   setup-command:
                       sudo -H pip3 install -qr requirements.txt; sudo -H pip3 install
-                      flake8==5.0.4 mypy
+                      flake8==5.0.4 mypy==1.13.0
                   command:
                       flake8 --ignore "N801, E203, E266, E501, W503, F812, E741, N803,
                       N802, N806" minitorch/ tests/ project/; mypy minitorch/*
